# reviewbot

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  TESTING.md  pyproject.toml
src/copilot/: __init__.py  config.py  context_builder.py  diff_parser.py  poster.py  prompts.py
tests/: test_dedup_coarse.py  test_diff_parser.py  test_pipeline.py
tests/fixtures/: sample.diff
