[project]
name = "code-review-copilot"
version = "0.1.0"
description = "AI code reviewer that posts inline PR comments, summarises risk, and learns team conventions (GenAI Assignment 2)"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.95.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "unidiff>=0.7.5",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "streamlit>=1.36",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
copilot = "copilot.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
